--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 body,
 .navbar {
-  color: #96a2b4;
-  background-color: #3c4452 !important;
+  color: #E5063E;
+  background-color: #090728 !important;
   font-family: 'Noto Sans', 'Noto Sans CJK {SC, TC}', sans-serif;
 }
 
 hr {
-  border-top: 1px solid #4c5667;
+  border-top: 1px solid #383f4b;
 }
 
 table {
@@ -14,9 +14,10 @@ table {
 }
 
 .App-logo {
-  height: 20px;
+  height: 40px;
   float: left;
   margin-right: 6px;
+  margin-top: -8px;
 }
 
 #main-content {
@@ -24,7 +25,7 @@ table {
 }
 
 #footer {
-  border-top: 1px solid #4c5667;
+  border-top: 1px solid #E5063E;
   margin-top: 35px;
   margin-bottom: 20px;
   padding-top: 10px;
@@ -94,7 +95,7 @@ table {
 
 .panel-default > .panel-heading {
   background-color: #383f4b;
-  color: #dce2ec;
+  color: #E5063E;
   padding-left: 20px;
   padding-top: 20px;
 }
@@ -130,7 +131,7 @@ table {
 [id*='-table'] > tbody > tr > td {
   padding-top: 10px;
   padding-bottom: 10px;
-  border-top: 1px solid #4c5667;
+  border-top: 1px solid #383f4b;
 }
 
 .filter {
@@ -173,8 +174,10 @@ table {
   color: #dce2ec !important;
 }
 
+.navbar-default .dropdown-menu > .active > a,
 .navbar-default .dropdown-menu > li > a:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0);
+  color: #e5063E !important;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -190,17 +193,17 @@ table {
 .navbar-default .navbar-nav > .active > a:focus,
 .navbar-default .navbar-nav > .active > a:hover {
   background-color: #3c4452 !important;
-  color: white !important;
+  color: #E5063E !important;
   font-weight: 600;
 }
 
 .navbar-default .navbar-nav > li.open > a.dropdown-toggle {
   background-color: #222;
-  color: white;
+  color: #e5063E;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-  color: white;
+  color: #e5063E;
 }
 
 .nav-tabs > li > a {
@@ -230,9 +233,10 @@ ul.navbar-nav .divider-vertical {
  * see this link for details about this css:
  *   https://stackoverflow.com/questions/18192082/bootstrap-3-navbar-collapse
  */
-@media (max-width: 1116px) {
+@media (max-width: 1296px) {
   .navbar-header {
     float: none;
+	margin-bottom: 4px;
   }
   .navbar-toggle {
     display: block;
@@ -300,14 +304,14 @@ ul.navbar-nav .divider-vertical {
 
 #Search-Container {
   margin-bottom: 30px;
-  padding: 65px 15px 25px 15px;
-  background-color: #4c5667;
+  padding: 50px 15px 10px 15px;
+  background-color: #383f4b;
 }
 
 #Search-Container input {
   border: none;
   font-size: 13px;
-  color: #4c5667;
+  color: #383f4b;
   padding-left: 20px;
   padding-right: 20px;
   background: rgba(255, 255, 255, 0.9);
@@ -326,7 +330,7 @@ ul.navbar-nav .divider-vertical {
   position: absolute;
   top: 15px;
   right: 17px;
-  color: #4c5667;
+  color: #383f4b;
   z-index: 4;
   background: transparent;
   border: none;
@@ -350,8 +354,8 @@ ul.navbar-nav .divider-vertical {
 
 .Network-Selector button {
   font-size: 14px;
-  background: #08b5e5;
-  border: 1px solid #08b5e5;
+  background: #E5063E;
+  border: 1px solid #E5063E;
   border-radius: 60px;
   color: white;
   cursor: pointer;
@@ -374,7 +378,7 @@ ul.navbar-nav .divider-vertical {
 
 .Network-Selector .is-inactive:hover {
   opacity: 0.8;
-  background: #08b5e5;
+  background: #E5063E;
   color: white;
   transition: all 0.18s ease-in-out;
 }
@@ -392,7 +396,7 @@ ul.navbar-nav .divider-vertical {
 }
 
 .directoryRow {
-  border-bottom: 1px solid #4c5667;
+  border-bottom: 1px solid #383f4b;
 }
 
 .directoryRow td {
@@ -468,7 +472,7 @@ a[id|='account-tabs-tab'][aria-selected='true'] {
   border-radius: 60px;
   padding: 4px 12px 4px;
   font-weight: 500;
-  background-color: #03a9f3;
+  background-color: #90392a;
   color: white;
   transition: all 0.18s ease-in-out;
 }
@@ -500,7 +504,7 @@ a[id|='account-tabs-tab'][aria-selected='true'] {
 .pager {
   padding-top: 10px;
   padding-bottom: 10px;
-  border-top: 1px solid #4c5667;
+  border-top: 1px solid #383f4b;
   margin-top: 0;
   margin-bottom: 0;
 }
